load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "leetcode_lib",
    srcs = [
        "init_cmd.go",
        "main.go",
    ],
    importpath = "github.com/colin-valentini/go/cmd/leetcode",
    visibility = ["//visibility:private"],
    deps = ["@com_github_alecthomas_kong//:kong"],
)

go_binary(
    name = "leetcode",
    embed = [":leetcode_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "leetcode_test",
    srcs = ["init_cmd_test.go"],
    embed = [":leetcode_lib"],
    deps = ["@com_github_stretchr_testify//assert"],
)
