load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "1056_confusing-number",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/1056_confusing-number",
    visibility = ["//visibility:public"],
)

go_test(
    name = "1056_confusing-number_test",
    srcs = ["solution_test.go"],
    embed = [":1056_confusing-number"],
    deps = ["@com_github_stretchr_testify//assert"],
)
