load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "110_balanced-binary-tree",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/110_balanced-binary-tree",
    visibility = ["//visibility:public"],
)

go_test(
    name = "110_balanced-binary-tree_test",
    srcs = ["solution_test.go"],
    embed = [":110_balanced-binary-tree"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
