load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "11_container-with-most-water",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/11_container-with-most-water",
    visibility = ["//visibility:public"],
)

go_test(
    name = "11_container-with-most-water_test",
    srcs = ["solution_test.go"],
    embed = [":11_container-with-most-water"],
    deps = ["@com_github_stretchr_testify//assert"],
)
