load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "121_best-time-to-buy-and-sell-stock",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/121_best-time-to-buy-and-sell-stock",
    visibility = ["//visibility:public"],
)

go_test(
    name = "121_best-time-to-buy-and-sell-stock_test",
    srcs = ["solution_test.go"],
    embed = [":121_best-time-to-buy-and-sell-stock"],
    deps = ["@com_github_stretchr_testify//assert"],
)
