load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "125_valid-palindrome",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/125_valid-palindrome",
    visibility = ["//visibility:public"],
)

go_test(
    name = "125_valid-palindrome_test",
    srcs = ["solution_test.go"],
    embed = [":125_valid-palindrome"],
    deps = ["@com_github_stretchr_testify//assert"],
)
