load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "128_longest-consecutive-sequence",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/128_longest-consecutive-sequence",
    visibility = ["//visibility:public"],
)

go_test(
    name = "128_longest-consecutive-sequence_test",
    srcs = ["solution_test.go"],
    embed = [":128_longest-consecutive-sequence"],
    deps = ["@com_github_stretchr_testify//assert"],
)
