load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "130_surrounded-regions",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/130_surrounded-regions",
    visibility = ["//visibility:public"],
)

go_test(
    name = "130_surrounded-regions_test",
    srcs = ["solution_test.go"],
    embed = [":130_surrounded-regions"],
    deps = ["@com_github_stretchr_testify//assert"],
)
