load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "133_clone-graph",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/133_clone-graph",
    visibility = ["//visibility:public"],
)

go_test(
    name = "133_clone-graph_test",
    srcs = ["solution_test.go"],
    embed = [":133_clone-graph"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
