load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "141_linked-list-cycle",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/141_linked-list-cycle",
    visibility = ["//visibility:public"],
)

go_test(
    name = "141_linked-list-cycle_test",
    srcs = ["solution_test.go"],
    embed = [":141_linked-list-cycle"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
