load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "14_longest-common-prefix",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/14_longest-common-prefix",
    visibility = ["//visibility:public"],
)

go_test(
    name = "14_longest-common-prefix_test",
    srcs = ["solution_test.go"],
    embed = [":14_longest-common-prefix"],
    deps = ["@com_github_stretchr_testify//assert"],
)
