load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "153_find-minimum-in-rotated-sorted-array",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/153_find-minimum-in-rotated-sorted-array",
    visibility = ["//visibility:public"],
)

go_test(
    name = "153_find-minimum-in-rotated-sorted-array_test",
    srcs = ["solution_test.go"],
    embed = [":153_find-minimum-in-rotated-sorted-array"],
    deps = ["@com_github_stretchr_testify//assert"],
)
