load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "19_remove-nth-node-from-end-of-list",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/19_remove-nth-node-from-end-of-list",
    visibility = ["//visibility:public"],
)

go_test(
    name = "19_remove-nth-node-from-end-of-list_test",
    srcs = ["solution_test.go"],
    embed = [":19_remove-nth-node-from-end-of-list"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
