load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "200_number-of-islands",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/200_number-of-islands",
    visibility = ["//visibility:public"],
)

go_test(
    name = "200_number-of-islands_test",
    srcs = ["solution_test.go"],
    embed = [":200_number-of-islands"],
    deps = ["@com_github_stretchr_testify//assert"],
)
