load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "207_course-schedule",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/207_course-schedule",
    visibility = ["//visibility:public"],
)

go_test(
    name = "207_course-schedule_test",
    srcs = ["solution_test.go"],
    embed = [":207_course-schedule"],
    deps = ["@com_github_stretchr_testify//assert"],
)
