load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "20_valid-parentheses",
    srcs = ["solution.go"],
    importpath = "github.com/colin-valentini/go/practice/leetcode/20_valid-parentheses",
    visibility = ["//visibility:public"],
)

go_test(
    name = "20_valid-parentheses_test",
    srcs = ["solution_test.go"],
    embed = [":20_valid-parentheses"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
